# nRF52_CoAP_Server_sample

./: CMakeLists.txt  Kconfig  README.md  prj.conf
interface/: coap_server_client_interface.h
src/: coap_server.c  ot_coap_example_1.c  ot_coap_example_1.h  ot_coap_example_2.c  ot_coap_example_2.h  ot_coap_example_3.c  ot_coap_example_3.h  ot_coap_utils.c  ot_coap_utils.h  ot_common.c  ot_common.h
